--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MAIN_JWT_SECRET = "xeramain-bf5814c7de-6680e258f0f7650bda59-801932a67241b0b"
+DB_HOST = srv1388.hstgr.io
+DB_USER = u350266280_lokidatasetup      
+DB_PASSWORD = texeract2024LOKI$$$     
+DB_DATABASE = u350266280_xeradatabase
