--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MAIN_JWT_SECRET = "xeramain-bf5814c7de-6680e258f0f7650bda59-801932a67241b0b"
+API_JWT_SECRET = xeraAPI-efb78d1a2c-0ea5b02a13175ba80dfe
 DB_HOST = srv1388.hstgr.io
 DB_USER = u350266280_lokidatasetup      
 DB_PASSWORD = texeract2024LOKI$$$     
