--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_HOST = srv1388.hstgr.io
 DB_USER = u350266280_lokidatasetup      
 DB_PASSWORD = texeract2024LOKI$$$     
 DB_DATABASE = u350266280_xeradatabase
+
+# DB_HOST = 46.202.129.137
+# DB_USER = hope      
+# DB_PASSWORD = Johnhope@2002
+# DB_DATABASE = xeradatabase
