--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "amqplib": "^0.10.5",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.4.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.4",
+    "moment": "^2.30.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.5",
+    "node-cache": "^5.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redis": "^4.7.0",
+    "web-vitals": "^2.1.4",
+    "winston": "^3.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
