--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 MAIN_JWT_SECRET = "xeramain-bf5814c7de-6680e258f0f7650bda59-801932a67241b0b"
 API_JWT_SECRET = xeraAPI-efb78d1a2c-0ea5b02a13175ba80dfe
-DB_HOST = srv1388.hstgr.io
-DB_USER = u350266280_lokidatasetup      
-DB_PASSWORD = texeract2024LOKI$$$     
-DB_DATABASE = u350266280_xeradatabase
+# DB_HOST = srv1388.hstgr.io
+# DB_USER = u350266280_lokidatasetup      
+# DB_PASSWORD = texeract2024LOKI$$$     
+# DB_DATABASE = u350266280_xeradatabase
 
-# DB_HOST = 46.202.129.137
-# DB_USER = hope      
-# DB_PASSWORD = Johnhope@2002
-# DB_DATABASE = xeradatabase
+DB_HOST = 46.202.129.137
+DB_USER = hope      
+DB_PASSWORD = Johnhope@2002
+DB_DATABASE = xeradatabase
