--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ DB_HOST = 46.202.129.137
 DB_USER = hope      
 DB_PASSWORD = Johnhope@2002
 DB_DATABASE = xeradatabase
+
+
+REACT_APP_XERA_DEV_KEY = xeraAPI-efb78d1a2c-0ea5b02a13175ba80dfe
+REACT_APP_XERA_WEB_KEY = xeraAPI-webMainTexeract-egsdfw33resdfdsf
+REACT_APP_XERA_API_KEY = XERA4dd84a0085ee3a2332e5b8980691f3a9892649
