--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MAIN_JWT_SECRET = "xeramain-bf5814c7de-6680e258f0f7650bda59-801932a67241asd"
+MAIN_JWT_SECRET = xeramain-bf5814c7de-6680e258f0f7650bda59-801932a67241asd
 API_JWT_SECRET = xeraKEYaf1a9a6b6d6b91d23Texeract
 # DB_HOST = srv1388.hstgr.io
 # DB_USER = u350266280_lokidatasetup      
